# email_checker

./: EmailFinder.spec  build.py  build.spec  hook-requests.py  main.py  main.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
email_checker/: interface.py  mass_scanner.py
